Updated the file

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -6,7 +6,7 @@
     "id": "ZxaXS4e1hUdR"
    },
    "source": [
-    "#Import Libraries"
+    "### Import Libraries"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "id": "AY9EQsYIhYsI"
    },
    "source": [
-    "#Download and Load Stopwords"
+    "### Download and Load Stopwords"
    ]
   },
   {
@@ -92,7 +92,7 @@
     "id": "IojIT8zwhgH7"
    },
    "source": [
-    "Load Stopwords - English"
+    "### Load Stopwords - English"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "id": "q8iMQHmGhs7F"
    },
    "source": [
-    "#Import Dataset and Select required Columns"
+    "### Import Dataset and Select required Columns"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "id": "VPhonaTXhvZE"
    },
    "source": [
-    "Drop Unwanted columns from dataset"
+    "### Drop Unwanted columns from dataset"
    ]
   },
   {
@@ -383,7 +383,7 @@
     "id": "hUZxezwyh7Ti"
    },
    "source": [
-    "#Checking Class Labels"
+    "### Checking Class Labels"
    ]
   },
   {
@@ -484,7 +484,7 @@
     "id": "sxAkQy1qh9hY"
    },
    "source": [
-    "#Data Cleaning and Feature Selection"
+    "### Data Cleaning and Feature Selection"
    ]
   },
   {
@@ -493,7 +493,7 @@
     "id": "4BhGz29Nd-WK"
    },
    "source": [
-    "Create Stemming Object"
+    "#### Create Stemming Object"
    ]
   },
   {
@@ -513,7 +513,7 @@
     "id": "qpsqVVUDeBD4"
    },
    "source": [
-    "Dictionary for Clitics Separation"
+    "#### Dictionary for Clitics Separation"
    ]
   },
   {
@@ -652,7 +652,7 @@
     "id": "YZ5Y9v4Kc1zU"
    },
    "source": [
-    "Creating Corpus of Words"
+    "#### Creating Corpus of Words"
    ]
   },
   {
@@ -698,7 +698,7 @@
     "id": "g4FTHSXCiDHW"
    },
    "source": [
-    "Create Bag of Words using TfIdfVectorizer"
+    "### Create Bag of Words using TfIdfVectorizer"
    ]
   },
   {
@@ -730,7 +730,7 @@
     "id": "j_NmYQXJASvK"
    },
    "source": [
-    "# Split data into Train and Test Sets"
+    "### Split data into Train and Test Sets"
    ]
   },
   {
@@ -750,7 +750,7 @@
     "id": "xw8QEInAiQu0"
    },
    "source": [
-    "#Applying Logistic Regression Model with 5-Fold Cross Validation"
+    "### Applying Logistic Regression Model with 5-Fold Cross Validation"
    ]
   },
   {
@@ -770,7 +770,7 @@
     "id": "b-creE79c_Tp"
    },
    "source": [
-    "5-Fold Cross Validation"
+    "#### 5-Fold Cross Validation"
    ]
   },
   {
@@ -818,7 +818,7 @@
     "id": "mSrjY2AGdC2B"
    },
    "source": [
-    "Fitting Training Data"
+    "#### Fitting Training Data"
    ]
   },
   {
@@ -864,7 +864,7 @@
     "id": "RpQlwmm-dGAh"
    },
    "source": [
-    "Confusion Matrix"
+    "#### Confusion Matrix"
    ]
   },
   {
@@ -915,7 +915,7 @@
     "id": "4AFpl6SvdITc"
    },
    "source": [
-    "Classification Report"
+    "#### Classification Report"
    ]
   },
   {
@@ -968,7 +968,7 @@
     "id": "lefv8tGiia8v"
    },
    "source": [
-    "#Applying Random Forest Model with 5-fold cross validation"
+    "### Applying Random Forest Model with 5-fold cross validation"
    ]
   },
   {
@@ -988,7 +988,7 @@
     "id": "XznpO_KadXKH"
    },
    "source": [
-    "5-Fold Cross Validation"
+    "#### 5-Fold Cross Validation"
    ]
   },
   {
@@ -1035,7 +1035,7 @@
     "id": "Teph6caTdbm-"
    },
    "source": [
-    "Fitting Training Data"
+    "#### Fitting Training Data"
    ]
   },
   {
@@ -1081,7 +1081,7 @@
     "id": "ZTRgmV_7dhbC"
    },
    "source": [
-    "Confusion Matrix"
+    "#### Confusion Matrix"
    ]
   },
   {
@@ -1132,7 +1132,7 @@
     "id": "klrq9YAedjal"
    },
    "source": [
-    "Classification Report"
+    "#### Classification Report"
    ]
   },
   {
@@ -1185,7 +1185,7 @@
     "id": "oDYeVRN-iWeZ"
    },
    "source": [
-    "# Applying Linear SVM Model with 5-fold cross validation"
+    "### Applying Linear SVM Model with 5-fold cross validation"
    ]
   },
   {
@@ -1205,7 +1205,7 @@
     "id": "BDrkZa1fdmEG"
    },
    "source": [
-    "5-Fold Cross Validation"
+    "#### 5-Fold Cross Validation"
    ]
   },
   {
@@ -1252,7 +1252,7 @@
     "id": "hooPE58ZdoeC"
    },
    "source": [
-    "Fit Training Data"
+    "#### Fit Training Data"
    ]
   },
   {
@@ -1298,7 +1298,7 @@
     "id": "mvvv3N1ddq22"
    },
    "source": [
-    "Confusion Matrix"
+    "#### Confusion Matrix"
    ]
   },
   {
@@ -1349,7 +1349,7 @@
     "id": "2bVNwstfds1q"
    },
    "source": [
-    "Classification Report"
+    "#### Classification Report"
    ]
   },
   {
@@ -1402,7 +1402,7 @@
     "id": "Vm0jBBIKXs1_"
    },
    "source": [
-    "# Applying Kernel SVM with 5-fold Cross Validation"
+    "### Applying Kernel SVM with 5-fold Cross Validation"
    ]
   },
   {
@@ -1422,7 +1422,7 @@
     "id": "_smerlf2dwBg"
    },
    "source": [
-    "5-Fold Cross Validation"
+    "#### 5-Fold Cross Validation"
    ]
   },
   {
@@ -1454,7 +1454,7 @@
     "id": "DxsUwa8ddybG"
    },
    "source": [
-    "Fit Training Data"
+    "#### Fit Training Data"
    ]
   },
   {
@@ -1485,7 +1485,7 @@
     "id": "zji6Wxqsd0Ai"
    },
    "source": [
-    "Confusion Matrix(Test Set)"
+    "#### Confusion Matrix(Test Set)"
    ]
   },
   {
@@ -1524,7 +1524,7 @@
     "id": "kayNnXcbd2W3"
    },
    "source": [
-    "Classification Report(Test Set)"
+    "#### Classification Report(Test Set)"
    ]
   },
   {
@@ -1555,13 +1555,6 @@
     "y_pred_KSVM = KSVM_classifier.predict(x_test)\n",
     "print(classification_report(y_test, y_pred_KSVM, target_names=['Hate','Offensive','Neither']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1587,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
